# joker_mode

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.bat  build.sh  build_unity.bat  code_check.sh  enter_dev.bat  generate_compilecommands.bat  generate_compilecommands.sh
cmake/: FindJokerLibraries.cmake  TargetCreationFuncs.cmake
git-hooks/: pre-merge-commit  pre-push
hiscore_server/: platformio.ini
hiscore_server/src/: main.cpp
src/: CMakeLists.txt  soc_dll_unity_windows.c
src/app/: CMakeLists.txt  main.c
src/based/: CMakeLists.txt  based_arena.c  based_arena.h  based_basic.c  based_basic.h  based_logging.c  based_logging.h  based_raylib.c  based_raylib.h
src/efs/: CMakeLists.txt  efs_entity.c  efs_entity.h  efs_entity_props.h
src/game/: CMakeLists.txt  core_game_memory.c  core_game_memory.h  core_menu_state.h  game.c  game.h  game_api.h  gameover.c  gameover.h  main.c
src/game_core/: CMakeLists.txt  core_entity_types.h  core_game_memory.c  core_game_memory.h  core_projectile.c  core_projectile.h  core_texture.c  core_texture.h  core_texture_types.c  core_texture_types.h  core_tilemap.c  core_tilemap.h  textures.def
src/gameplay/: CMakeLists.txt  core_entity_template.c  core_entity_template.h  core_entity_types.h  core_projectile.h  core_spawner.h  core_wall.c  core_wall.h
src/http/: CMakeLists.txt  http.c  http.h  main.c
src/level/: CMakeLists.txt  lvl_collision.c  lvl_collision.h
src/render/: CMakeLists.txt  core_texture.c  core_texture.h  core_texture_types.h  fonts.def  render_font.c  render_font.h  render_font_types.c  render_font_types.h  textures.def
src/vos/: CMakeLists.txt  vos.h  vos_common.c  vos_linux.c  vos_socket.c  vos_socket.h  vos_windows.c
unity_build/: build_linux.sh  build_unity_windows.bat  build_windows.bat  generate_unity.ps1
